@@ -21,6 +21,8 @@ Lib/
     and parse_change_records()
   - Stricter order checking of dn:, changetype:, etc.
   - Removed non-existent 'AttrTypeandValueLDIF' from ldif.__all__
+* New mix-in class ldap.controls.openldap.SearchNoOpMixIn
+  adds convience method noop_search_st() to LDAPObject class
 
 ----------------------------------------------------------------
 Released 2.4.19 2015-01-10
@@ -1168,4 +1170,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.345 2015/06/21 19:08:16 stroeder Exp $
+$Id: CHANGES,v 1.346 2015/06/22 11:51:07 stroeder Exp $
